# tauri_todo

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json
data/: data.json
src/: App.tsx  TodoApp.tsx  TodoContainer.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src/components/: TodoList.tsx
src/components/header/: CustomDatePicker.tsx  Header.css  Header.tsx  HeaderCenter.tsx  HeaderLeft.tsx  HeaderRight.tsx  index.ts
src/feature/todo/api/: todoApi.ts
src/feature/todo/components/: TodoList.tsx
src/feature/todo/container/: TodoContainer.tsx
src/feature/todo/types/: todo.d.ts
src/services/: todoService.ts
src/types/: todo.d.ts
